# MCP-Flight-Booking

./: .gitignore  CODEBASE_INDEX.md  LICENSE  README.md
client/: ai_agent.py  demo_client.py  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: deployment.md  setup.md  usage.md
server/: .env.example  pyproject.toml
server/app/: config.py  main.py  server_http.py
server/app/middleware/: auth.py
server/app/tools/: book_flight.py  cancel_booking.py  list_bookings.py  search_flights.py
server/data/: airports.json  bookings.json  company_policies.md  flights.json
