[project]
name = "flight-mcp-server"
version = "1.0.0"
description = "MCP Flight Booking POC Server"
requires-python = ">=3.11"

dependencies = [
    "mcp[cli]>=1.0.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
